# ImportCSV

./: Cargo.toml  README.md  cab.csv  cab_ite.csv  conf.json  ite.csv  log.csv  teste.csv  teste2.csv
.github/workflows/: main.yml
src/: lib.rs  main.rs
src/api/: mod.rs  post_login.rs
src/api/auth/: login.rs  logout.rs
src/api/request/: request.rs
src/auth/: login.rs  logout.rs
src/cli/: cli.rs
src/core/: generate_body.rs  mod.rs  spreedsheet.rs
src/request/: request.rs
src/schemas/: login_req_schema.rs  login_ret_schema.rs  logout_req_schema.rs  mod.rs  save_record_ret_schema.rs  save_record_schema.rs
src/schemas/api/: mod.rs
src/schemas/api/auth/: login_req_schema.rs  login_ret_schema.rs  mod.rs
src/schemas/api/pedido/: mod.rs  ped_vend_req_body.rs
src/schemas/api/save_record/: mod.rs  save_record_ret_schema.rs
src/schemas/config/: builder_config.rs  mod.rs
src/schemas/spreedsheet/: mod.rs  spreedsheet_schema.rs
src/ui/: spinner.rs
src/utils/: mod.rs  resolve_param.rs
