[package]
name = "import_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json","cookies","blocking"] }
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
serde_json = "1.0.96"
rust-embed="6.7.0"
clap = "4.3.10"

